package hu.bme.aut.saturn.education.persistence.enums;

public enum RoleType {
    STUDENT,
    LECTURER,
    ADMINISTRATOR
}
